# raw

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  coverage.json  pyproject.toml
.beads/: deletions.jsonl  issues.jsonl
.github/: copilot-instructions.md
docs/: AI_AGENTS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  BUILDER.md  BUILDER_DESIGN.md  CLAUDE_CODE_SKILLS.md  CLAUDE_INTEGRATION.md  GUIDE.md  OVERVIEW.md  QUICKSTART.md  README.md  REFERENCE.md  TOOLS_REGISTRY.md  TWO_LAYERS.md  agent-native-guide.md  cli-sdk-parity.md  sdk-reference.md
docs/dev/: BUILDER_DESIGN.md  README.md  cli-sdk-parity.md
examples/: README.md  agent_built_workflow.py  edge_case_handler.py  hybrid_workflow.py  inbound_call_workflow.py  sdk_workflow_construction.py  sentiment_analysis.py
examples/solution-callcenter/: .env.example  ARCHITECTURE.md  DIAGRAMS.md  MANIFEST.md  QUICKSTART.md  README.md  config.yaml  pyproject.toml
examples/solution-callcenter/src/callcenter/: __init__.py  app.py  config.py  main.py  prompts.py
examples/solution-callcenter/src/callcenter/skills/: __init__.py  check_order_status.py  lookup_customer.py  schedule_callback.py
examples/solution-callcenter/src/callcenter/workflows/: __init__.py  post_call.py
examples/solution-callcenter/tests/: test_skills.py
skills/: README.md
skills/raw-tool-creator/references/: best_practices.md  examples.md  security.md  tool_structure.md
skills/raw-tool-creator/templates/: tool_template.py
skills/raw-workflow-creator/references/: decorator_usage.md  security.md  testing_guide.md  workflow_patterns.md
skills/raw-workflow-creator/templates/: dry_run_template.py  workflow_template.py
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: output-patterns.md  workflows.md
skills/skill-creator/scripts/: init_skill.py  package_skill.py  quick_validate.py
src/raw/: __init__.py  __main__.py  cli.py  exceptions.py
src/raw/builder/: __init__.py  config.py  context.py  entrypoint.py  events.py  gates.py  journal.py  llm.py  loop.py  mode.py  resume.py  skills.py  tools.py
src/raw/builder/prompts/: execute_mode.txt  plan_mode.txt
src/raw/commands/: __init__.py  build.py  create.py  hooks.py  init.py  install.py  list.py  logs.py  onboard.py  prime.py  publish.py  run.py  search.py  serve.py  show.py  stop.py  trigger.py  validate.py
src/raw/core/: __init__.py  schemas.py
src/raw/discovery/: __init__.py  display.py  git_fetcher.py  registry.py  search.py  tools.py  workflow.py
src/raw/engine/: __init__.py  backends.py  container.py  execution.py  mocks.py  protocols.py  runner.py  server.py  server_dashboard.py  server_models.py  server_registry.py
src/raw/engine/templates/: dashboard.html
src/raw/scaffold/: __init__.py  dry_run.py  init.py  template_render.py
src/raw/scaffold/markdown/: __init__.py  builders.py  escape.py  models.py  render.py
src/raw/scaffold/markdown/templates/: onboard.md.j2  prime.md.j2
src/raw/scaffold/templates/: dashboard.html
src/raw/scaffold/templates/tool/: readme.md.j2  test.py.j2  (+1 more)
src/raw/sdk/: README.md  __init__.py  models.py  parity.py  tools.py  workflow.py
src/raw/validation/: __init__.py  signals.py  validator.py
src/raw_ai/: __init__.py  config.py  decorator.py  tools.py
src/raw_runtime/: __init__.py  agentic.py  agentic.py.backup  agentic_cache.py  agentic_cost.py  agentic_parser.py  approval.py  base.py  bus.py  capability.py  connection.py  container.py  context.py  decorators.py  entrypoint.py  env.py  events.py  handlers.py  index.py  journal.py  manifest.py  models.py  orchestrator.py  provenance.py  reconcile.py  reducer.py  resume.py  secrets.py  storage.py  telemetry.py  triggers.py
src/raw_runtime/capabilities/: __init__.py  calendar.py  classify.py  converse.py  crm.py  database.py  email.py  http.py  notify.py  ocr.py  payment.py  pdf.py  scraper.py  search.py  slack.py  sms.py  spreadsheet.py  storage.py  summarize.py  translate.py  voice.py
src/raw_runtime/drivers/: __init__.py  approval.py  bus.py  human.py  mocks.py  orchestrator.py  secrets.py  storage.py  telemetry.py
src/raw_runtime/protocols/: __init__.py  approval.py  bus.py  human.py  logger.py  orchestrator.py  secrets.py  storage.py  telemetry.py
src/raw_runtime/tools/: __init__.py  base.py  decorator.py  discovery.py  registry.py
src/raw_runtime/tools/builtin/: __init__.py  calendar.py  classify.py  converse.py  crm.py  database.py  email.py  http.py  notify.py  ocr.py  payment.py  pdf.py  scraper.py  search.py  slack.py  sms.py  spreadsheet.py  storage.py  summarize.py  translate.py  voice.py
tests/: TEST_SCENARIOS.md  __init__.py  conftest.py
tests/builder/: test_config.py  test_gates.py  test_journal.py  test_loop.py  test_mode.py  test_resume.py  test_skills.py
tests/integration/: test_agent_native.py  test_connected_workflow.py
tests/raw/: test_cli.py  test_execution.py  test_markdown.py  test_schemas.py  test_server.py
tests/raw/discovery/: test_git_fetcher.py  test_registry.py
tests/raw/fixtures/markdown/: onboard.md  prime_empty.md  prime_with_content.md
tests/raw/validation/: test_signals.py  test_validator.py
tests/raw_ai/: __init__.py  test_config.py  test_decorator.py  test_tools.py
tests/raw_runtime/: test_agentic.py  test_agentic_additional.py  test_agentic_cache.py  test_agentic_comprehensive.py  test_agentic_cost.py  test_agentic_parser.py  test_completion_signals.py  test_events.py  test_index.py  test_journal.py  test_models.py  test_provenance.py  test_reconcile.py  test_reducer.py  test_resume.py
tests/raw_runtime/core/: test_base.py  test_context.py  test_decorator_events.py  test_decorators.py
tests/raw_runtime/drivers/: test_approval.py  test_bus.py  test_human.py  test_orchestrator.py  test_secrets.py  test_storage.py  test_telemetry.py
tests/raw_runtime/tools/: test_discovery.py  test_discovery_integration.py  test_registry.py
tests/raw_sdk/: __init__.py  test_parity.py  test_tools.py  test_workflow.py
tools/: __init__.py
(+5 files in other folders)
