[project]
name = "raw"
version = "0.1.0"
description = "Run Agentic Workflows - Agent-first workflow orchestration for Claude Code"
readme = "README.md"
authors = [
    { name = "mpuig" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.28.1",
    "jinja2>=3.0",
    "numpy>=2.2.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.scripts]
raw = "raw.cli:cli"

[project.optional-dependencies]
search = [
    "sentence-transformers>=5.1.2",
]
serve = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]
ai = [
    "pydantic-ai>=0.0.17",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0.12.20250915",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raw", "src/raw_runtime"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["raw", "raw_runtime"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["rich.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
