[project]
name = "callcenter-solution"
version = "0.1.0"
description = "Production-ready AI-powered call center solution built on RAW Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # RAW Platform Core
    "raw-bot>=0.1.0",
    "raw-agent>=0.1.0",
    "raw-server>=0.1.0",
    "raw-state>=0.1.0",
    "raw-telemetry>=0.1.0",
    "raw-queue>=0.1.0",

    # LLM Integration
    "integration-llm>=0.1.0",

    # Voice Services
    "integration-deepgram>=0.1.0",
    "integration-elevenlabs>=0.1.0",

    # Telephony
    "integration-twilio>=0.1.0",

    # Transports
    "transport-voice>=0.1.0",
    "transport-webhook>=0.1.0",

    # Core dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",

    # Audio processing
    "pipecat-ai>=0.0.40",

    # Database (optional but recommended)
    "asyncpg>=0.29",
    "redis>=5.0",

    # Utilities
    "tenacity>=8.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/callcenter"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
